exercise-1.1/log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: shared-data-pvc
      containers:
        - name: log-output-writer
          image: log-output
          imagePullPolicy: Never
          command: ["node", "writer.js"]
          volumeMounts:
            - name: shared-data
              mountPath: /usr/src/app/files
        - name: log-output-server
          image: log-output
          imagePullPolicy: Never
          command: ["node", "server.js"]
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-data
              mountPath: /usr/src/app/files
