exercise-1.1/log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: log-output
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
